--- a/Archivo/index.html
+++ b/Archivo/index.html
@@ -29,7 +29,7 @@
 	<div class="header">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-xs 12 col-md-4 col-lg -4 ">
 					<h1>
 						<img class="logo" src="img/logo.png" alt="Gourmet"></img></h1>
 				</div>
